@startuml
title CONXTOR – Aktuelles Datenmodell
hide methods
hide stereotypes
skinparam linetype ortho

entity app_users {
  * id : uuid <<PK>>
  --
  email : text <<unique>>
  name : text
  password_hash : text
  status : text
  preferred_locale : de|es|ca|en|fr
  email_verified_at : timestamptz
}

entity auth_email_tokens {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  purpose : email_verification | password_reset
  token_hash : text <<unique>>
  locale : text
  expires_at : timestamptz
  used_at : timestamptz
}

entity user_sessions {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  token_hash : text <<unique>>
  expires_at : timestamptz
}

entity user_roles {
  * user_id : uuid <<FK>>
  * role_name : text <<FK>>
}

entity wa_groups {
  * id : text <<PK>>
  --
  owner_user_id : uuid <<FK>>
  platform : text
  chat_type : text
  parent_group_id : text <<FK/self>>
  subject : text
  language : text
  is_selected : bool
}

entity user_group_access {
  * user_id : uuid <<FK>>
  * group_id : text <<FK>>
  --
  can_read : bool
  can_manage : bool
  is_selected : bool
}

entity connector_accounts {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  platform : whatsapp | telegram
  status : text
  session_data : bytea
  next_sync_at : timestamptz
}

entity connector_auth_state {
  * account_id : uuid <<FK>>
  * key_namespace : text
  * key_name : text
  --
  value : bytea
  version : bigint
}

entity "wa_whatsmeow.whatsmeow_device" as WhatsmeowDevice {
  * jid : text <<PK>>
  --
  lid : text
  noise_key : bytea
  identity_key : bytea
  signed_pre_key : bytea
  adv_key : bytea
  push_name : text
}

note right of WhatsmeowDevice
  Von whatsmeow/sqlstore verwaltet.
  Das Schema wird durch Migration 024 angelegt.
  connector_accounts.external_account_id
  verweist logisch auf jid.
end note

entity connector_leases {
  * account_id : uuid <<PK/FK>>
  --
  worker_id : text
  lease_kind : processing | onboarding
  lease_until : timestamptz
}

entity connector_lease_history {
  * id : uuid <<PK>>
  --
  account_id : uuid <<FK>>
  user_id : uuid <<FK>>
  worker_id : text
  started_at : timestamptz
  ended_at : timestamptz
  end_reason : text
}

entity connector_qr_sessions {
  * account_id : uuid <<PK/FK>>
  --
  user_id : uuid <<FK>>
  platform : text
  status : text
  qr_payload : text
  expires_at : timestamptz
}

entity connector_onboarding_requests {
  * id : uuid <<PK>>
  --
  account_id : uuid <<FK>>
  user_id : uuid <<FK>>
  status : text
  worker_id : text
}

entity connector_cursors {
  * account_id : uuid <<FK>>
  * group_id : text <<FK>>
  --
  last_external_message_id : text
  last_received_at : timestamptz
  last_sequence_no : bigint
}

entity messages {
  * id : uuid <<PK>>
  --
  group_id : text <<FK>>
  platform : text
  wa_message_id : text
  sender_jid : text
  sender_name : text
  kind : text
  text : text
  received_at : timestamptz
  reply_to : text
  content_hash : text
  edited_at : timestamptz
  deleted_at : timestamptz
}

entity message_revisions {
  * id : uuid <<PK>>
  --
  message_id : uuid <<FK>>
  revision_no : int
  change_type : created | updated | deleted
  raw : jsonb
}

entity media_objects {
  * id : uuid <<PK>>
  --
  message_id : uuid <<FK>>
  media_key : text
  bucket : text
  object_key : text
  thumbnail_key : text
  object_path : text
  mime : text
  status : text
  ocr_text : text
}

entity audio_jobs {
  * id : uuid <<PK>>
  --
  message_id : uuid <<FK>>
  status : text
  attempts : int
  transcript : text
  language : text
  next_attempt_at : timestamptz
}

entity ai_jobs {
  * id : uuid <<PK>>
  --
  message_id : uuid <<FK>>
  status : text
  attempts : int
  error : text
  processing_started_at : timestamptz
  processing_duration_ms : bigint
}

entity message_analyses {
  * message_id : uuid <<PK/FK>>
  --
  relevant : bool
  relevance_level : high | medium | low
  relevance_score : numeric
  summary : text
  facts/entities/events/action_items/places : jsonb
  provenance/conflicts : jsonb
  model : text
  prompt_version : text
}

entity knowledge_topics {
  * id : uuid <<PK>>
  --
  generation_id : uuid
  group_id : text <<FK>>
  topic_key : text
  subtopic_key : text
  parent_topic_id : uuid <<FK/self>>
  title : text
  summary : text
  source_message_ids : jsonb
}

entity knowledge_topic_definitions {
  * id : uuid <<PK>>
  --
  language : de | es | ca | en | fr
  topic_key : text
  title : text
  description : text
  signal_type : content | location | entity
  enabled : bool
  sort_order : integer
}

entity knowledge_subtopic_terms {
  * id : uuid <<PK>>
  --
  group_id : text <<FK>>
  language : de | es | ca | en | fr
  topic_key : text
  subtopic_key : text
  term : text
  weight : numeric
  source : system | admin | inferred
  positive_count : int
  updated_at : timestamptz
}

entity knowledge_rebuild_jobs {
  * id : uuid <<PK>>
  --
  generation_id : uuid
  replace_existing : bool = false
  status : queued | running | completed | failed
  total/processed/failed/skipped : integer
  error : text
}

entity knowledge_generation_state {
  * id : bool <<PK>>
  --
  active_generation_id : uuid
}

entity knowledge_items {
  * id : uuid <<PK>>
  --
  topic_id : uuid <<FK>>
  parent_item_id : uuid <<FK/self>>
  item_key : text
  item_role : summary | detail
  content : text
  embedding : vector(384)
  source_message_ids : jsonb
}

entity ai_feedback {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  group_id : text <<FK>>
  message_id : uuid <<FK>>
  target_type : relevance | event | place | knowledge | thread
  decision : accept | reject | correct
}

entity conversation_threads {
  * id : uuid <<PK>>
  --
  group_id : text <<FK>>
  title : text
  confidence : numeric
  first_message_at / last_message_at : timestamptz
}

entity conversation_thread_messages {
  * thread_id : uuid <<PK/FK>>
  * message_id : uuid <<PK/FK>>
  --
  role : root | context | reply
  confidence : numeric
  source : heuristic | user | llm
  evidence : jsonb
}

entity message_relations {
  * source_message_id : uuid <<PK/FK>>
  * target_message_id : uuid <<PK/FK>>
  * relation_type : same_thread | continues | updates | supports | contradicts
  --
  group_id : text <<FK>>
  confidence : numeric
  source : heuristic | user | llm
  evidence : jsonb
}

entity conversation_relation_feedback {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  group_id : text <<FK>>
  message_id / related_message_id : uuid <<FK>>
  decision : link | unlink
  created_at : timestamptz
}

note right of conversation_thread_messages
  Konsolidierer ersetzt betroffene Mitgliedschaften
  atomar unter einer Gruppensperre.
  Älteste Nachricht = root; Evidenz enthält
  version=consolidator-v1 und Kohäsionssignale.
  Neueste Feedback-Entscheidung je Paar zählt;
  Unlink darf nicht transitiv umgangen werden.
end note

entity ai_learning_terms {
  * id : uuid <<PK>>
  --
  group_id : text <<FK, nullable>>
  language : de | es | ca | en | fr
  category : relevance | event | action | place | keyword | exclusion
  topic_key : text <<nullable>>
  term : text
  weight : numeric
  relevance_level : high | medium | low <<nullable>>
  signal_role : strong | supporting | generic | provisional
  enabled : bool
  source : system | admin | feedback | inferred
  positive_count / negative_count : int
  updated_at : timestamptz
}

entity ai_canonical_aliases {
  * id : uuid <<PK>>
  --
  group_id : text <<FK>>
  alias : text
  canonical_key : text
  kind : entity | knowledge | event
}

entity ai_knowledge_edges {
  * id : uuid <<PK>>
  --
  group_id : text <<FK>>
  source_key : text
  target_key : text
  relation : text
  source_message_ids : jsonb
}

entity event_inbox {
  * consumer_name : text <<PK>>
  * event_id : text <<PK>>
  --
  subject : text
  status : processing | processed | retry | failed
  attempts : int
  payload : jsonb
}

entity event_failures {
  * id : uuid <<PK>>
  --
  event_id : text
  consumer_name : text
  subject : text
  error : text
  attempts : int
}

entity replay_jobs {
  * id : uuid <<PK>>
  --
  requested_by : uuid <<FK>>
  group_ids : jsonb
  from_at/to_at : timestamptz
  status : text
  processed_count : int
}

entity ai_reassessment_jobs {
  * id : uuid <<PK>>
  --
  requested_by : uuid <<FK>>
  status : queued | running | completed | failed
  total_count : int
  processed_count : int
  failed_count : int
  skipped_count : int
  created_at/updated_at : timestamptz
}

entity thread_reassessment_jobs {
  * id : uuid <<PK>>
  --
  requested_by : uuid <<FK>>
  status : queued | running | completed | failed
  total_count : int
  processed_count : int
  failed_count : int
  skipped_count : int
  created_at/updated_at : timestamptz
}

entity ai_learning_term_history {
  * id : uuid <<PK>>
  --
  term_id : uuid <<FK>>
  group_id : text <<FK>>
  language/category : text
  term : text
  event_type : created | feedback | inferred | admin_update | deleted
  weight_delta : numeric
  occurred_at : timestamptz
}

entity ai_place_resolution_cache {
  * id : uuid <<PK>>
  --
  language : de | es | ca | en | fr
  normalized_name : text
  display_name : text
  latitude / longitude : double
  confidence : numeric
  resolved : bool
  updated_at : timestamptz
}

entity ai_hermes_usage {
  * bucket_start : timestamptz <<PK>>
  * trigger : text <<PK>>
  * operation : text <<PK>>
  * outcome : text <<PK>>
  --
  candidate_count : bigint
  logical_requests : bigint
  http_attempts : bigint
  error_count : bigint
  updated_at : timestamptz
}

app_users ||--o{ user_sessions
app_users ||--o{ auth_email_tokens
app_users ||--o{ user_roles
app_users ||--o{ user_group_access
wa_groups ||--o{ user_group_access
wa_groups ||--o{ messages
wa_groups ||--o{ knowledge_topics
wa_groups ||--o{ ai_feedback
wa_groups ||--o{ ai_learning_terms
wa_groups ||--o{ ai_canonical_aliases
wa_groups ||--o{ ai_knowledge_edges
wa_groups ||--o{ connector_cursors
wa_groups ||--o| wa_groups : parent/topic

app_users ||--o{ connector_accounts
connector_accounts ||--o{ connector_auth_state
connector_accounts ||--o| connector_leases
connector_accounts ||--o{ connector_lease_history
connector_accounts ||--o| connector_qr_sessions
connector_accounts ||--o{ connector_onboarding_requests
connector_accounts ||--o{ connector_cursors

messages ||--o{ message_revisions
messages ||--o{ media_objects
messages ||--o{ audio_jobs
messages ||--o| ai_jobs
messages ||--o| message_analyses
knowledge_topics ||--o{ knowledge_items
knowledge_topics ||--o{ knowledge_topics : root/subtopic
knowledge_topic_definitions ..> knowledge_topics : localized title
wa_groups ||--o{ knowledge_subtopic_terms
knowledge_subtopic_terms ..> knowledge_topics : learned subtopic profile
knowledge_generation_state ||--o{ knowledge_topics : active generation
knowledge_rebuild_jobs ..> knowledge_generation_state : switches on success
knowledge_items ||--o{ knowledge_items : parent/detail
messages ||--o{ ai_feedback
app_users ||--o{ ai_feedback
wa_groups ||--o{ conversation_threads
conversation_threads ||--o{ conversation_thread_messages
messages ||--o{ conversation_thread_messages
messages ||--o{ message_relations
wa_groups ||--o{ message_relations
app_users ||--o{ conversation_relation_feedback
wa_groups ||--o{ conversation_relation_feedback
messages ||--o{ conversation_relation_feedback
app_users ||--o{ replay_jobs
app_users ||--o{ ai_reassessment_jobs
app_users ||--o{ thread_reassessment_jobs
ai_learning_terms ||--o{ ai_learning_term_history
wa_groups ||--o{ ai_learning_term_history
wa_groups ..> ai_place_resolution_cache : language-scoped cache

note "PostGIS aktiviert in PostgreSQL für Ortsdaten.\npgvector wird primär für knowledge_items.embedding verwendet.\nai_hermes_usage aggregiert Remote-/Local-only-Metriken minutenweise.\nNATS JetStream und MinIO sind Laufzeitdienste, keine relationalen Tabellen." as N1
N1 .. wa_groups

note bottom of wa_groups
  Ein vollständig verwaister Chat wird gelöscht.
  PostgreSQL kaskadiert auf Nachrichten, Medien,
  Analysen, Events, Knowledge Base und AI-Jobs.
  Die JSON-Payload-Stores event_inbox und
  event_failures werden für entfernte Gruppen
  und Nachrichten explizit bereinigt.
end note

note right of ai_learning_terms
  Globale Systembegriffe verwenden
  group_id = NULL. Gruppeneinträge werden
  zusätzlich geladen und haben in ihrer
  Gruppe stärkeres Gewicht. Migration 015
  ergänzt mehrsprachige Füllwörter und
  Gesprächsfloskeln; der laufende Code
  enthält dafür keine statische Stopword-Liste.
end note
@enduml
